--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.5.0",
     "path": "^0.12.7",
     "uuid": "^9.0.1"
   }
